--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,7 +1,10 @@
 <mvc:View
-    xmlns="sap.m"
-    xmlns:mvc="sap.ui.core.mvc">
+   controllerName="sap.ui.demo.walkthrough.controller.App"
+   xmlns="sap.m"
+   xmlns:mvc="sap.ui.core.mvc">
+   <Button
+      text="Say Hello"
+      press=".onShowHello"/>
 
-       <Text text="Hello Newly"/>
-
+    <Text text="Hello World"/>
 </mvc:View>
