--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -9,17 +9,24 @@
             <Page title="{i18n>homePageTitle}">
                <content>
                   <Panel
-                     headerText="{i18n>helloPanelTitle}">
+                     headerText="{i18n>helloPanelTitle}"
+                     class="sapUiResponsiveMargin"
+                     width="auto" >
                      <content>
 
                         <Button
                            text="{i18n>showHelloButtonText}"
+                           class="sapUiSmallMarginEnd"
                            press=".onShowHello"/>
                         <Input
                            value="{/recipient/name}"
                            description="Hello {/recipient/name}"
                            valueLiveUpdate="true"
                            width="60%"/>
+                        <Text
+                           text="Hello {/recipient/name}"
+                           class="sapUiSmallMargin" />
+                        
                      </content>
                   </Panel>
                </content>
